[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-geo-prob-asia"
version = "0.1.0"
description = "Analytic agent scaffolding for Japan entrapment-risk monitoring"
readme = "README.md"
authors = [{ name = "GeoProb Agent" }]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "duckduckgo-search>=7.1",
  "httpx>=0.27",
  "rich>=13.7"
]

[project.scripts]
agent-geo = "agent_geo.cli:main"
